new strategy is now a button and a modal. Some table formatting. Cleanup of duplicate static folder

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -1,5 +1,11 @@
 /* Base styles and utilities */
 
+/* Vertically center content in all generic Bootstrap table cells */
+.table td,
+.table th {
+    vertical-align: middle !important;
+}
+
 /* Opacity transitions */
 .hover-opacity-100 {
     transition: opacity 0.2s;
