--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -72,7 +72,8 @@
                                 'warning': 'warning',
                                 'info': 'info',
                                 'success': 'success',
-                                'auth_expired': 'warning'
+                                'auth_expired': 'warning',
+                                'danger': 'danger'
                             }.get(category, 'info') %}
                             <div class="alert alert-{{ alert_class }} alert-dismissible fade show" role="alert">
                                 {{ message }}
